fix：修改接口处理报错和swagger文档
